style: Fix alignment

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -33,6 +33,6 @@ body {
 .withLove {
   position: absolute;
   top: 103%;
-  left: 80%;
+  left: 75%;
   font-size: 12px;
 }
